[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/room_instance.gd" type="Script" id=1]
[ext_resource path="res://scripts/rooms/flashback_oliver.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Krub-MediumItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/Krub-ExtraLightItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/Krub-Medium.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/Krub-ExtraLight.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 22
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 22
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 22
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=5]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="room_instance" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="state_handler" type="Control" parent="."]
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="state_handler"]
margin_left = -3.49902
margin_top = 2.33276
margin_right = 1276.5
margin_bottom = 722.333
color = Color( 0, 0, 0, 1 )

[node name="text_container" type="Control" parent="state_handler"]
editor/display_folded = true
margin_right = 1280.0
margin_bottom = 538.0

[node name="t1" type="RichTextLabel" parent="state_handler/text_container"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 150.0
margin_right = 1280.0
margin_bottom = 202.0
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]you liked some things about yourself.[/center]"
text = "you liked some things about yourself."
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/text_container/t1"]
anims/Fadein = SubResource( 5 )

[node name="c2" type="RichTextLabel" parent="state_handler/text_container"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 200.0
margin_right = 1280.0
margin_bottom = 252.0
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]you were [u]kind to strangers[/u]."
text = "you were kind to strangers."
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/text_container/c2"]
anims/Fadein = SubResource( 6 )

[node name="t3" type="RichTextLabel" parent="state_handler/text_container"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 250.0
margin_right = 1280.0
margin_bottom = 302.0
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]you think back to your proudest moment.[/center]"
text = "you think back to your proudest moment."
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/text_container/t3"]
anims/Fadein = SubResource( 7 )

[node name="c4" type="RichTextLabel" parent="state_handler/text_container"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 300.0
margin_right = 1280.0
margin_bottom = 352.0
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]it was when you [u]won the spelling bee in 6th grade[/u].[/center]"
text = "it was when you won the spelling bee in 6th grade."
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/text_container/c4"]
anims/Fadein = SubResource( 8 )

[node name="t5" type="RichTextLabel" parent="state_handler/text_container"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 350.0
margin_right = 1280.0
margin_bottom = 402.0
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]the winning word was \"billionare.\"[/center]"
text = "the winning word was \"billionare.\""
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/text_container/t5"]
anims/Fadein = SubResource( 9 )

[node name="next_button" type="Button" parent="state_handler"]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 611.0
margin_top = 571.168
margin_right = 670.0
margin_bottom = 599.168
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="text" type="RichTextLabel" parent="state_handler/next_button"]
margin_left = 1.4953
margin_top = -2.2016
margin_right = 59.4953
margin_bottom = 39.7984
mouse_filter = 1
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
bbcode_text = "[center]next[/center]"
text = "next"
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/next_button"]
anims/Fadein = SubResource( 10 )

[node name="next_timer" type="Timer" parent="state_handler"]
one_shot = true

[node name="next_cover" type="Button" parent="state_handler"]
margin_right = 1280.0
margin_bottom = 720.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="wake_up_cover" type="Button" parent="state_handler"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
focus_mode = 0
enabled_focus_mode = 0
flat = true
[connection signal="mouse_entered" from="state_handler/next_button" to="state_handler/next_button/text" method="set_bbcode" binds= [ "[center][color=gray]next[/color][/center]" ]]
[connection signal="mouse_exited" from="state_handler/next_button" to="state_handler/next_button/text" method="set_bbcode" binds= [ "[center]next[/center]" ]]
[connection signal="pressed" from="state_handler/next_button" to="state_handler" method="next"]
[connection signal="timeout" from="state_handler/next_timer" to="state_handler" method="show_next_button"]
[connection signal="pressed" from="state_handler/next_cover" to="state_handler" method="next"]
[connection signal="pressed" from="state_handler/wake_up_cover" to="state_handler" method="wake_up"]
